[project]
name = "business.logic"
description = "Business logic"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Henry Rodman", email = "henry@developmentseed.com"},
]
license = {text = "MIT"}
dynamic = ["version"]
dependencies = [
    "asyncpg",
    "fastapi>=0.112.1",
    "geoalchemy2>=0.15.2",
    "geojson_pydantic>=1.1.0",
    "pydantic_settings>=2.4.0",
    "sqlmodel>=0.0.21",
    "shapely>=2.0.6",
    "httpx>=0.27.0",
    "folium>=0.17.0",
    "folium-vectortilelayer>=0.2.4",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "business/logic/__init__.py"

[tool.pdm.build]
includes = ["business/logic"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
mypy_path = "src"

[tool.ruff]
lint.select = ["E", "F", "I"]

